Fix alignments

--- a/static/webikwa_264/css/webikwa_264.css
+++ b/static/webikwa_264/css/webikwa_264.css
@@ -77,6 +77,7 @@ h2.page_zone_title {
 
 .article .meta {
   margin-bottom:.5rem;
+  text-align:right;
 
 }
 
@@ -240,7 +241,7 @@ footer ul li img {
   }
 
   .side_right {
-    text-align:right;
+    margin-right:3em;
   }
 
   .side_left .pagezone h2 {
